test/Fail/Issue610-module-alias-with.err
Issue610-module-alias-with.agda:29.11-30: error: [UnequalTypes]
The type
  ack (set _)
is not a subtype of
  ⊥
when checking that the expression subst (λ x → x) q _ has type ⊥
